--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,89 @@
 body{
     margin: 0;
     padding: 0;
-    background: url();
+    background: url(../Gambar/IMG_20190121_104750.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+.login {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform:translate(-50%,-50%);
+    background: rgba(0, 0, 0, 0.5);
+    padding: 20px;
+    width: 270px;
+    box-shadow: 0 0 10px 5px black; 
+}
+.avatar{
+    font-size: 50px;
+    background:rgba(0, 0, 0, 0.5);
+    width: 70px;
+    height: 70px;
+    line-height: 70px;
+    text-align: center;
+    position: fixed;
+    left: 50%;
+    top: 0;
+    transform: translate( -50%, -50%);
+    border-radius: 50%;
+    color:#dd0f0f;
+}
+.login h2{
+    text-align: center;
+    color:white;
+    padding-top: 5px;
+    letter-spacing: 5px;
+    padding: 1px 0;
+}
+.box-login{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+.box-login i{
+    font-size: 20px;
+    color:white;
+}
+.box-login input{
+    width: 100%;
+    padding: 0 10px;
+    background: none;
+    border: none;
+    outline: none;
+    color:white;
+    font-size: 18px;
+    border-bottom: 2px solid white;
+}
+.box-login input::placeholder{
+    color:white;
+}
+
+.btn-login{
+    width: 100%;
+    background: none;
+    padding-left: 5px;
+    padding-right: 5px;;
+    border: 1px solid white;
+    font-size: 13px;
+    letter-spacing: 5px;
+    color: white;
+    cursor: pointer;
+}
+.btn-login:hover{
+    background: rgba(0,0,0,0.8);
+}
+.btn {
+    display: flex;
+    justify-content: space-between;
+}
+.btn a {
+    color:white;
+    font-size: 14px;
+    text-decoration: none;
+}
+.btn a:hover {
+    text-decoration: underline;
 }
